--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,34 @@
+// Release management
+plugins {
+    id "co.riiid.gradle" version "0.4.2"
 
+}
+apply from: "$rootDir/gradle/github.gradle"
+
+// Translation
 apply from: "$rootDir/gradle/omegat.gradle"
 
+// Define projects directories.
+// -----------
+// 15 - IntelliJ IDEA Version 15.x
+// 2016 - IntelliJ IDEA Version 2016.x
+// and-143.2915847 - Android Studio
+// pycharm-2016 - PyCharm
+// -----------
 allprojects {
      ext {
         target15Dir = new File(rootDir, 'target/15')
         target16Dir = new File(rootDir, 'target/2016')
+        targetAndDir = new File(rootDir, 'target/and-143.2915847')
+        targetPyDir = new File(rootDir, 'target/pycharm-2016.1')
     }
 }
 
 task cleanRootDirs(type: Delete) {
     delete target15Dir
     delete target16Dir
+    delete targetAndDir
+    delete targetPyDir
     delete new File(rootDir, "build")
 }
 
@@ -48,6 +66,50 @@ subprojects {
     copyDistFiles.mustRunAfter jar
 }
 
+Closure processR = { src, dest ->
+    ["search", "messages"].each { type ->
+        copy {
+            from new File(src, type)
+            into new File(dest, type)
+        }
+    }
+    ["fileTemplates", "inspectionDescriptions", "intentionDescriptions",
+     "postfixTemplates", "tips"].each { type ->
+        copy {
+            from new File(src, type)
+            into new File(dest, type + "_ja")
+        }
+    }
+}
+
+project(":resources-pycharm") {
+    apply plugin: 'java'
+    defaultTasks 'jar'
+    jar.baseName = 'resources_ja'
+    jar.appendix = 'py2016.1'
+
+    task processResourceFiles(dependsOn: [prepareDir, '::translateResources']) << {
+        processR(targetPyDir, sourceSets.main.resources.srcDirs[0])
+    }
+    processResources.dependsOn processResourceFiles
+    processPropertiesFile.dependsOn processResourceFiles
+    clean.dependsOn removeDir
+}
+
+project(":resources-and") {
+    apply plugin: 'java'
+    defaultTasks 'jar'
+    jar.baseName = 'resources_ja'
+    jar.appendix = 'and'
+
+    task processResourceFiles(dependsOn: [prepareDir, '::translateResources']) << {
+        processR(targetAndDir, sourceSets.main.resources.srcDirs[0])
+   }
+    processResources.dependsOn processResourceFiles
+    processPropertiesFile.dependsOn processResourceFiles
+    clean.dependsOn removeDir
+}
+
 project(":resources-2016") {
     apply plugin: 'java'
     defaultTasks 'jar'
@@ -55,20 +117,7 @@ project(":resources-2016") {
     jar.appendix = '2016'
 
     task processResourceFiles(dependsOn: [prepareDir, '::translateResources']) << {
-        ["search", "messages"].each { src ->
-            copy {
-                from new File(target16Dir, src)
-                into new File(sourceSets.main.resources.srcDirs[0], src)
-            }
-        }
-
-        ["fileTemplates", "inspectionDescriptions", "intentionDescriptions",
-         "postfixTemplates", "tips"].each { src ->
-            copy {
-                from new File(target16Dir, src)
-                into new File(sourceSets.main.resources.srcDirs[0], src + "_ja")
-            }
-        }
+        processR(target16Dir, sourceSets.main.resources.srcDirs[0])
     }
     processResources.dependsOn processResourceFiles
     processPropertiesFile.dependsOn processResourceFiles
@@ -82,20 +131,7 @@ project(":resources-15") {
     jar.appendix = '15'
 
     task processResourceFiles(dependsOn: [prepareDir, '::translateResources']) << {
-        ["search", "messages"].each { src ->
-            copy {
-                from new File(target15Dir, src)
-                into new File(sourceSets.main.resources.srcDirs[0], src)
-                rename '(.*).properties', '$1_ja.properties'
-            }
-        }
-        ["fileTemplates", "inspectionDescriptions", "intentionDescriptions",
-         "postfixTemplates", "tips"].each { src ->
-            copy {
-                from new File(target15Dir, src)
-                into new File(sourceSets.main.resources.srcDirs[0], src + "_ja")
-            }
-        }
+        processR(target15Dir, sourceSets.main.resources.srcDirs[0])
     }
     processResources.dependsOn processResourceFiles
     processPropertiesFile.dependsOn processResourceFiles
