omegat plugin: ulgy work around for files dependencies
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ apply from: "$rootDir/gradle/github.gradle"
 
 // Translation
 apply plugin: "org.omegat.gradle"
+
+// FIXME: here is ugly configuration for omegat plugin
 dependencies {
     omegat fileTree('buildSrc/lib')
 }
