--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,21 @@ dependencies {
 // -----------
 allprojects {
      ext {
-        target15Dir = new File(rootDir, 'target/15')
-        target16Dir = new File(rootDir, 'target/2016')
-        targetAndDir = new File(rootDir, 'target/and-143.2915847')
-        targetPyDir = new File(rootDir, 'target/pycharm-2016.1')
+        intellij = "intellij-community"
+        productIdea = "idea"
+        productAnd = "android"
+        productPyCharm = "pycharm"
+
+        targetIjDir = new File(rootDir, 'target/' + intellij)
+        targetIdeaDir = new File(rootDir, 'target/' + productIdea)
+        targetAndDir = new File(rootDir, 'target/' + productAnd)
+        targetPyDir = new File(rootDir, 'target/' + productPyCharm)
     }
 }
 
 task cleanRootDirs(type: Delete) {
-    delete target15Dir
-    delete target16Dir
+    delete targetIjDir
+    delete targetIdeaDir
     delete targetAndDir
     delete targetPyDir
     delete new File(rootDir, "build")
@@ -96,7 +101,7 @@ project(":resources-pycharm") {
     apply plugin: 'java'
     defaultTasks 'jar'
     jar.baseName = 'resources_ja'
-    jar.appendix = 'py2016.1'
+    jar.appendix = 'pycharm'
 
     task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
         processR(targetPyDir, sourceSets.main.resources.srcDirs[0])
@@ -106,47 +111,46 @@ project(":resources-pycharm") {
     clean.dependsOn removeDir
 }
 
-project(":resources-and") {
+project(":resources-android") {
     apply plugin: 'java'
     defaultTasks 'jar'
     jar.baseName = 'resources_ja'
-    jar.appendix = 'and'
+    jar.appendix = 'android'
 
     task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
         processR(targetAndDir, sourceSets.main.resources.srcDirs[0])
-   }
-    processResources.dependsOn processResourceFiles
-    processPropertiesFile.dependsOn processResourceFiles
-    clean.dependsOn removeDir
-}
-
-project(":resources-2016") {
-    apply plugin: 'java'
-    defaultTasks 'jar'
-    jar.baseName = 'resources_ja'
-    jar.appendix = '2016'
-
-    task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
-        processR(target16Dir, sourceSets.main.resources.srcDirs[0])
     }
     processResources.dependsOn processResourceFiles
     processPropertiesFile.dependsOn processResourceFiles
     clean.dependsOn removeDir
 }
 
-project(":resources-15") {
+project(":resources-idea") {
     apply plugin: 'java'
     defaultTasks 'jar'
     jar.baseName = 'resources_ja'
-    jar.appendix = '15'
+    jar.appendix = 'idea'
 
     task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
-        processR(target15Dir, sourceSets.main.resources.srcDirs[0])
+        processR(targetIdeaDir, sourceSets.main.resources.srcDirs[0])
     }
     processResources.dependsOn processResourceFiles
     processPropertiesFile.dependsOn processResourceFiles
     clean.dependsOn removeDir
-    clean.dependsOn '::cleanRootDirs'
+}
+
+project(":resources-intellij-community") {
+    apply plugin: 'java'
+    defaultTasks 'jar'
+    jar.baseName = 'resources_ja'
+    jar.appendix = 'intellij-community'
+
+    task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
+        processR(targetIjDir, sourceSets.main.resources.srcDirs[0])
+    }
+    processResources.dependsOn processResourceFiles
+    processPropertiesFile.dependsOn processResourceFiles
+    clean.dependsOn removeDir
 }
 
 task wrapper(type: Wrapper) {
