--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ dependencies {
 allprojects {
      ext {
         intellij = "intellij-community"
+        android = "android"
         productIdea = "idea"
-        productAnd = "android"
         productPyCharm = "pycharm"
 
         targetIjDir = new File(rootDir, 'target/' + intellij)
+        targetAndDir = new File(rootDir, 'target/' + android)
         targetIdeaDir = new File(rootDir, 'target/product' + productIdea)
-        targetAndDir = new File(rootDir, 'target/product' + productAnd)
         targetPyDir = new File(rootDir, 'target/product' + productPyCharm)
     }
 }
