Gradle: Fix gradle error
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'resources-intellij-community', 'resources-idea', 'resources-and', 'resources-pycharm'
+include 'resources-intellij-community', 'resources-idea', 'resources-android', 'resources-pycharm'
