--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,7 @@ project(":product") {
     jar.appendix = ''
 
     task processResourceFiles(dependsOn: [prepareDir, '::translate']) << {
-        processR(targetIdeaDir, sourceSets.main.resources.srcDirs[0])
+        processR(targetProductDir, sourceSets.main.resources.srcDirs[0])
     }
     processResources.dependsOn processResourceFiles
     clean.dependsOn removeDir
