--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,56 @@
-apply plugin: 'java'
-
-// Translation
+// OmegaT plugin
 apply plugin: "org.omegat.gradle"
-
-// FIXME: here is ugly configuration for omegat plugin
 dependencies {
+    // FIXME: here is ugly configuration for omegat plugin
     omegat files('buildSrc/OmegaT.jar'),
            fileTree('buildSrc/lib')
 }
 
-Closure translationTask = { taskName, targetName ->
+// Generation of IntelliJ localized resources
+apply plugin: 'java'
+Closure customJarTask = { taskName, targetName ->
     task(taskName, type: Jar, dependsOn: [jar, translate]) {
         baseName targetName
         def fromDir = ''
-        if (taskName.startsWith("ide")) {
-           fromDir = "$projectDir/target/$targetName"
-           destinationDir new File("$buildDir")
-        } else {
+        if (taskName.startsWith("plugin")) {
            fromDir = "$projectDir/target/plugins/$targetName"
            destinationDir new File("$buildDir/plugins")
+        } else {
+           fromDir = "$projectDir/target/$targetName"
+           destinationDir new File("$buildDir")
         }
-        inputs.dir new File("$projectDir/target/$targetName")
-
-        into('messages') {
-            from "$fromDir/messages"
-        }
-        into('fileTemplates_ja') {
-            from "$fromDir/fileTemplates"
-        }
-        into('inspectionDescriptions_ja') {
-            from "$fromDir/inspectionDescriptions"
-        }
-        into('intentionDescriptions_ja') {
-            from "$fromDir/intentionDescriptions"
-        }
-        into('postfixTemplates_ja') {
-            from "$fromDir/postfixTemplates"
-        }
-        into('search_ja') {
-            from "$fromDir/search"
-        }
-        into('tips_ja') {
-            from "$fromDir/tips"
-        }
+        inputs.dir new File("$fromDir")
         from("$fromDir/") {
             exclude(['messages', 'fileTemplates', 'inspectionDescriptions',
-                     'intentionDescriptions', 'postfixTemplates', 'search', 'tips', '.ignoreme'])
+                    'intentionDescriptions', 'postfixTemplates', 'search', 'tips', '.ignoreme'])
         }
+
+        into('messages') {                 from "$fromDir/messages"  }
+        into('fileTemplates_ja') {         from "$fromDir/fileTemplates" }
+        into('inspectionDescriptions_ja') {from "$fromDir/inspectionDescriptions"}
+        into('intentionDescriptions_ja') { from "$fromDir/intentionDescriptions"}
+        into('postfixTemplates_ja') {      from "$fromDir/postfixTemplates"}
+        into('search_ja') {                from "$fromDir/search"}
+        into('tips_ja') {                  from "$fromDir/tips"}
     }
 }
 
 tasks.addRule("Pattern: plugin<ID>") { String taskName ->
     if (taskName.startsWith("plugin")) {
         def pluginName = taskName[6].toLowerCase() + taskName[7..taskName.length() - 1]
-        translationTask(taskName, pluginName)
+        customJarTask(taskName, pluginName)
     }
 }
 
 tasks.addRule("Pattern: ide<ID>") { String taskName ->
     if (taskName.startsWith("ide")) {
         def toolName = taskName[3].toLowerCase() + taskName[4..taskName.length() - 1]
-        translationTask(taskName, toolName)
+        customJarTask(taskName, toolName)
     }
 }
 
-artifacts {
-    archives ideIntellijCommunity, ideAndroid, ideProduct
-    archives pluginAndroid, pluginAnt, pluginGit4idea, pluginGradle
-    archives pluginJavaI18n, pluginJavaFX, pluginJunit, pluginMaven, pluginTerminal
-    archives pluginTestng, pluginUiDesigner, pluginYaml
-}
-
-dependencies {
-    testRuntime ideIntellijCommunity.outputs.files
-    testRuntime ideAndroid.outputs.files
-    testRuntime ideProduct.outputs.files
-    testRuntime pluginAndroid.outputs.files
-    testRuntime pluginAnt.outputs.files
-    testRuntime pluginGit4idea.outputs.files
-    testRuntime pluginGradle.outputs.files
-    testRuntime pluginJavaI18n.outputs.files
-    testRuntime pluginJavaFX.outputs.files
-    testRuntime pluginJunit.outputs.files
-    testRuntime pluginMaven.outputs.files
-    testRuntime pluginTerminal.outputs.files
-    testRuntime pluginTestng.outputs.files
-    testRuntime pluginUiDesigner.outputs.files
-    testRuntime pluginYaml.outputs.files
-}
+// Includes specifications for resource artifacts
+apply from: 'source/source.gradle'
 
 task wrapper(type: Wrapper) {
   gradleVersion = '2.14.1'
