--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 projectOwner=miurahr
-projectName=IDEA_resoures_ja
-projectDesc=Japanese resources for IntelliJ IDEA and other tools
+projectName=intellij-resoures-ja
+projectDesc=Japanese resources for IntelliJ platform and other tools
 projectTag=v0.9.0
-projectReleaseBody="Snapshot rerease"
+projectReleaseBody="Snapshot release"
