Use official OmegaT remote jar file.
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // OmegaT plugin
 apply plugin: "org.omegat.gradle"
 
+omegat {
+    projectDir = project.rootDir
+}
 // Generation of IntelliJ localized resources
 apply plugin: 'java'
 // Closure to make jar generation task with specified type and name
