--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ buildscript {
         maven {
             url "https://dl.bintray.com/miurahr/maven/"
         }
+        maven {
+            url "https://dl.bintray.com/omegat-org/maven/"
+        }
         jcenter()
     }
     dependencies {
-        classpath group: 'org.omegat.gradle', name: 'gradle-omegat-plugin', version: '0.9.0'
+        classpath group: 'org.omegat.gradle', name: 'gradle-omegat-plugin', version: '0.9.2'
     }
 }
 apply plugin: "org.omegat.gradle"
@@ -15,6 +18,9 @@ apply plugin: "org.omegat.gradle"
 repositories {
      maven {
         url "https://dl.bintray.com/miurahr/maven/"
+    }
+    maven {
+        url "https://dl.bintray.com/omegat-org/maven/"
     }
     jcenter()
 }
